--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
     "cypress": "^12.8.1",
-    "eslint-plugin-cypress": "^2.12.1"
+    "eslint-plugin-cypress": "^2.12.1",
+    "react-test-renderer": "^17.0.2"
   }
 }
